<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:id="@+id/first_view"
    android:background="@android:color/white"
    tools:context="com.example.android.landingpage.MainActivity">

<RelativeLayout
    android:id="@+id/relative_first"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_centerHorizontal="true"
        android:text="@string/do_you_feel_like_drinking_coffee"
        android:fontFamily="casual"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text_30"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/coffee_view"
        android:layout_below="@id/text_view"
        android:layout_marginTop="@dimen/margin_50"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/padding_20"
        android:layout_width="@dimen/margin_260"
        android:layout_height="@dimen/margin_200"
        android:background="@android:color/white"
        android:src="@drawable/coffee_icon"/>

    <HorizontalScrollView
        android:id="@+id/scroll_view"
        android:layout_below="@id/coffee_view"
        android:scrollbars="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="@dimen/margin_80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_marginLeft="@dimen/margin_40"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_to_our_app"
                    android:fontFamily="casual"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_30" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_60"
                    android:src="@drawable/basic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin_60">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_in_your_name"
                    android:fontFamily="casual"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_30" />

                <ImageView
                    android:layout_width="@dimen/margin_320"
                    android:layout_height="@dimen/margin_300"
                    android:scaleType="fitCenter"
                    android:layout_marginTop="@dimen/margin_40"
                    android:src="@drawable/name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin_60">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_from_a_wide_range"
                    android:fontFamily="casual"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_30" />

                <ImageView
                    android:layout_width="@dimen/margin_320"
                    android:layout_height="@dimen/margin_300"
                    android:scaleType="fitCenter"
                    android:layout_marginTop="@dimen/margin_40"
                    android:src="@drawable/coffee_variety"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/margin_60">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_from_2_toppings"
                    android:fontFamily="casual"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_30" />

                <ImageView
                    android:layout_width="@dimen/margin_300"
                    android:layout_height="@dimen/margin_300"
                    android:scaleType="fitCenter"
                    android:layout_marginTop="@dimen/margin_40"
                    android:src="@drawable/toppings"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/margin_60">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_as_many"
                    android:fontFamily="casual"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_30" />

                <ImageView
                    android:layout_width="@dimen/margin_285"
                    android:layout_height="@dimen/margin_300"
                    android:scaleType="fitCenter"
                    android:layout_marginTop="@dimen/margin_40"
                    android:src="@drawable/quantity"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="@dimen/margin_60"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simply_email"
                    android:fontFamily="casual"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_30" />

                <ImageView
                    android:layout_width="@dimen/margin_350"
                    android:layout_height="@dimen/margin_350"
                    android:scaleType="fitCenter"
                    android:layout_marginTop="@dimen/margin_40"
                    android:src="@drawable/email"/>

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/button_1"
        android:layout_below="@id/scroll_view"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_30"
        android:layout_centerInParent="true"
        android:text="@string/get_this_app"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20"
        android:onClick="link"
        android:layout_width="@dimen/margin_200"
        android:layout_height="@dimen/margin_50"
        android:background="@drawable/button"
        android:shadowColor="@color/shadow"
        android:shadowRadius="5" />

</RelativeLayout>

</ScrollView>


